tests/paczka1/fuzzy1/86200153.err
Error in line 10: S680 S738 67,2
Error in line 5: V7bv A275 71,9
Error in line 11: S680 A275 0,9
Error in line 24: yT0nhMq0o S680 -5,5
Error in line 20: S680 S738 20,4
Error in line 14: 7qig S680 80,0
Error in line 30: yT0nhMq0o S738 z0,z
